--- a/ppij_web_aplikacija/Views/Login/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Login/Index.cshtml
@@ -18,7 +18,7 @@
                 </div>
                 <div class="text-center">
                     <p>Zapamti me  <input type="checkbox" name="zapamtiMe" /></p>
-                    <input type="submit" class="btn btn-default"/><br />
+                    <input type="submit" class="btn btn-default" title="Login"/><br />
                 </div>
             </form>
         </div>
