--- a/ppij_web_aplikacija/Views/Login/Registracija.cshtml
+++ b/ppij_web_aplikacija/Views/Login/Registracija.cshtml
@@ -41,6 +41,7 @@
                                 <div class="mali-razmak-gore">
                                     @Html.PasswordFor(model => model.lozinka_ponovljeno)
                                     @Html.ValidationMessageFor(model => model.lozinka_ponovljeno)
+                                    @Html.ValidationMessage("error_ista")
                                 </div>
                                 <div class="mali-razmak-gore">
                                     @Html.EditorFor(model => model.email)
@@ -53,7 +54,7 @@
                         </div>
                     </div>
                     <p class="mali-razmak-gore mali-razmak-dolje centered">
-                        <input type="submit" class="btn btn-default" title="Registriraj se" />
+                        <input type="submit" class="btn btn-default" value="Registriraj se &raquo;" />
                     </p>
                 </fieldset>
             }
