--- a/ppij_web_aplikacija/Views/Shared/_Layout.cshtml
+++ b/ppij_web_aplikacija/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <ul class ="nav navbar-right navbar-nav" >
                     @if (Request.IsAuthenticated)
                     {
-                        <li class="navbar-right">@Html.ActionLink(User.Identity.Name, "Index", "Home", new { area = "" }, null)</li>
+                        <li class="navbar-right">@Html.ActionLink(User.Identity.Name, "Index", "Profil", new { area = "" }, null)</li>
                         <li class="navbar-right">@Html.ActionLink("Logout", "Logout", "Login", new { area = "" }, null)</li>
                     }
                     else
