--- a/ppij_web_aplikacija/Views/Login/Registracija.cshtml
+++ b/ppij_web_aplikacija/Views/Login/Registracija.cshtml
@@ -33,7 +33,7 @@
                                 <div class="mali-razmak-gore">
                                     @Html.EditorFor(model => model.korisnicko_ime)
                                     @Html.ValidationMessageFor(model => model.korisnicko_ime)
-                                    @Html.ValidationMessage("kor_ime_uniq");
+                                    @Html.ValidationMessage("kor_ime_uniq")
                                 </div>
                                 <div class="mali-razmak-gore">
                                     @Html.PasswordFor(model => model.Password)
