--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -1,15 +1,16 @@
-﻿@model ppij_web_aplikacija.Models.ChangePasswordBindingModel
+﻿@model ppij_web_aplikacija.Models.PostavkeModel
 <!DOCTYPE html>
 <html>
     <head>
         <title>@ViewBag.Title</title>
+        <script type ="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
     </head>
     <body>
         <div class="container">
             <div class="tabbable" role="tablist">
 
-                <ul class="nav nav-tabs" id="myTab">
-                    <li role="presentation" class="active"><a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">Postavke termina</a></li>
+                <ul class="nav nav-tabs" id="myTab" >
+                    <li role="presentation" class="active"><a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">Instrukcije</a></li>
                     <li role="presentation"><a href="#tab2" aria-controls="tab2" role="tab" data-toggle="tab">Promjena lozinke</a></li>
                     <li role="presentation"><a href="#tab3" aria-controls="tab2" role="tab" data-toggle="tab">Postavke profila</a></li>
                 </ul>
@@ -17,9 +18,13 @@
                 <div class="tab-content">
 
 
+
+
                     <div class="tab-pane active top-buffer" role="tabpanel" id="tab1">
                         <a href="/">Početna stranica</a>
                     </div>
+
+
 
 
                     <div class="tab-pane" role="tabpanel" id="tab2">
@@ -35,8 +40,8 @@
                                             <mark>Stara lozinka</mark>
                                         </label>
                                         <div id="promjena_lozinke_stara" class="col-md-5">
-                                            @Html.EditorFor(model => model.OldPassword)
-                                            @Html.ValidationMessageFor(model => model.OldPassword)
+                                            @Html.EditorFor(model => model.changePassword.OldPassword)
+                                            @Html.ValidationMessageFor(model => model.changePassword.OldPassword)
                                             @Html.ValidationMessage("error_old_password")
                                         </div>
                                     </div>
@@ -47,8 +52,8 @@
                                             <mark>Nova lozinka</mark>
                                         </label>
                                         <div id="promjena_lozinke_nova" class="col-md-6">
-                                            @Html.PasswordFor(model => model.NewPassword)
-                                            @Html.ValidationMessageFor(model => model.NewPassword)
+                                            @Html.PasswordFor(model => model.changePassword.NewPassword)
+                                            @Html.ValidationMessageFor(model => model.changePassword.NewPassword)
                                             @Html.ValidationMessage("error_loz")
                                         </div>
                                     </div>
@@ -59,17 +64,22 @@
                                             <mark>Ponovljena nova lozinka</mark>
                                         </label>
                                         <div id="promjena_lozinke_ponovljena" class="col-md-6">
-                                            @Html.PasswordFor(model => model.ConfirmPassword)
-                                            @Html.ValidationMessageFor(model => model.ConfirmPassword)
+                                            @Html.PasswordFor(model => model.changePassword.ConfirmPassword)
+                                            @Html.ValidationMessageFor(model => model.changePassword.ConfirmPassword)
                                             @Html.ValidationMessage("error_loz")
                                         </div>
                                     </div>
                                     <br />
 
+                                    
                                     <div class="col-md-2 mali-razmak-gore">
-                                        <input type="submit" class="btn btn-default" value="Promjeni &raquo;" t /> <br />
+                                        <input onclick="addindex();" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
                                     </div>
 
+
+                                    <div id="tekst1" class="hidden">
+                                        @Html.EditorFor(model => model.trenutniTab)
+                                    </div>
 
                                 </form>
                             </fieldset>
@@ -77,43 +87,75 @@
                     </div>
 
 
+
+
+
                     <div class="tab-pane top-buffer" role="tabpanel" id="tab3">
-                        <h4>Postavke profila</h4>
-                        <a href="/">Početna stranica</a>
+                        <h3>Postavke profila</h3>
+                        @using (Html.BeginForm())
+                        {
+
+                            <fieldset >
+                                <form class="form-horizontal " method="post">
+                                    
+                                    <div class="row">
+                                        <label class="col-md-3 control-label" for="jeinstruktor">
+                                            <mark>Želim biti instruktor</mark>
+                                        </label>
+                                        <div id="jeinstruktor" class="col-md-6">
+                                            @Html.CheckBoxFor(model => model.ostalePostavke.instruktor)
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-md-2 mali-razmak-gore">
+                                            <input onclick="addindex();" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
+                                        </div>
+                                    </div>
+
+                                    <div id="tekst2" class="hidden">
+                                        @Html.EditorFor(model => model.trenutniTab)
+                                    </div>
+
+                                </form>
+                            </fieldset>
+                        }
                     </div>
+
 
 
                 </div>
 
-                @if (!ViewData.ModelState.IsValid)
+
+
+                @if (@Html.ViewData.ModelState.IsValid == false)
                 {
-                    <script>
+                    <script type="text/javascript">
                         $(document).ready(function () {
                             activaTab('tab2');
                         });
                         function activaTab(tab) {
+                            //document.getElementById("tekst").innerHTML = "ViewData Modelstate not valid: " + tab.toString();
                             $('#myTab a[href="#' + tab + '"]').tab('show');
                         };
                     </script>
                 }
 
-                <!--<script type="text/javascript">
 
-                    $('#myTab  a').click(function (e) {
-                        e.preventDefault();
-                        $(this).tab('show');
-                    });
-                    $("ul.nav-tabs#myTab > li > a").on("shown.bs.tab", function (e) {
-                        var id = $(e.target).attr("href");
-                        localStorage.setItem('selectedTab', id)
-                    });
-                    var selectedTab = localStorage.getItem('selectedTab');
-                    $('#myTab a[href="' + selectedTab + '"]').tab('show');
+                <script>
 
-                </script>-->
+                    function addindex(){
+                        $('#trenutniTab').val(getIndex());
+                    }
+
+                    function getIndex() {
+                        var index = ($('#myTab .active')).index();
+                        return index;
+                    }
+                </script>
+
+
             </div>
-            
-
         </div>
 </body>
 </html>
