--- a/ppij_web_aplikacija/Content/bootstrap.css
+++ b/ppij_web_aplikacija/Content/bootstrap.css
@@ -73,6 +73,9 @@ a:hover {
 .field-validation-error {
         color:Red;
     }
+/********************************************************************************************/
+
+/*****************************************************/
 
 .crvena-boja{
     text-decoration-color:red;
@@ -105,7 +108,7 @@ a:hover {
 .margina-dolje{
     bottom:50px;
 }
-
+/***********************************************************************************************/
 #footer{
    position:absolute;
    bottom:60px;
