--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -23,31 +23,48 @@
                     <div class="tab-pane active top-buffer" role="tabpanel" id="tab1">
                         @if (@ViewBag.razinaPrava == 1)
                         {
-                            <h4>Popis Kategorija</h4>
-                            <ul>
-                                @foreach (var kategorija in ViewBag.kategorije)
-                                {
-                                    <li>
-                                        @kategorija.naziv_kategorija @kategorija.kratica_kategorija
-                                    </li>
-                                }
-                            </ul>
-                            <h4>Popis termina</h4>
-                            <div id="table" style="width:800px;">
-                                <!--tablica sa terminima-->
-                            </div>
+                            using (Html.BeginForm())
+                            {
 
-
+                                <fieldset>
+                                    <h4>Popis Kategorija</h4>
+                                    <ul>
+                                        @foreach (var kategorija in ViewBag.kategorije)
+                                        {
+                                            <li>
+                                                @kategorija.naziv_kategorija @kategorija.kratica_kategorija
+                                            </li>
+                                        }
+                                    </ul>
+                                    <div id="testni" class="hidden">
+                                        <!--testiranje-->
+                                    </div>
+                                    <h4>Popis termina</h4>
+                                    <div id="table" style="width:800px;">
+                                        <!--tablica sa terminima-->
+                                    </div>
+                                    <div id="prazan">
+                                        @Html.HiddenFor(model => model.mojeInstrukcije.mojiTermini, new { id = "hiddenstateid"})
+                                    </div>
+                                    <div id="tekst0" >
+                                        @Html.HiddenFor(model => model.trenutniTab)
+                                    </div>
+                                    <div class="col-md-2 mali-razmak-gore">
+                                        <input onclick="addterminmodel();" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
+                                    </div>
+                                </fieldset>
+                            }
                         }
                         else if (@ViewBag.razinaPrava == 2)
                         {
-                            <p>Ukoliko želite biti instruktor odaberite opciju "Želim biti instruktor" u Postavkama profila</p>
+                        <p>Ukoliko želite biti instruktor odaberite opciju "Želim biti instruktor" u Postavkama profila</p>
                         }
                         else if (@ViewBag.razinaPrava == 0)
                         {
-                            
+
                         }
                     </div>
+
 
 
 
@@ -167,6 +184,8 @@
 
 
                 <script>
+                    var dodanitermini;
+
                     function addindex(){
                         $('#trenutniTab').val(getIndex());
                     }
@@ -175,7 +194,13 @@
                         var index = ($('#myTab .active')).index();
                         return index;
                     }
-
+                    
+                    function oznaciTermine(){
+                        for(var i =0; i < dodanitermini.length; i++){
+                            $("#" + dodanitermini[i]).prop("checked", true);
+                            $('#' + dodanitermini[i]).siblings('label').html('Zauzeto');
+                        }
+                    }
 
                     jQuery(document).ready(function () {
                         var rows = " ";
@@ -186,8 +211,8 @@
                             col = " ";
                             for (var j = 1; j <= 7; j++) {
                                 col = col + '<td><div class="redrazmak ">'
-                                    + '<input id="d' + j + '' + i + '" type="checkbox" name="d' + j + '' + i + '" onclick="changeText(this.id);"/>'
-                                        + '<label for="d' + j + '' + i + '">'
+                                    + '<input id="' + (100*j + i) + '" type="checkbox" class="mycheck" name="' + (100*j + i) + '" onclick="changeText(this.id);"/>'
+                                        + '<label class="mylabel" for="' + (100*j + i) + '">'
                                             + 'Slobodno'
                                         + '</label>'
                                     + '</div></td>';
@@ -197,17 +222,48 @@
                         }
                         table = table + rows + '</tbody></table>';
                         document.getElementById("table").innerHTML = table;
+                        
+                        dodanitermini = @Html.Raw(Json.Encode(Model.mojeInstrukcije.mojiTermini));
+                        document.getElementById("testni").innerHTML = dodanitermini;
+                        oznaciTermine();
                     });
 
                     function changeText(id) {
 
                         if ($('#' + id).is(':checked')) {
                             $('#' + id).siblings('label').html('Zauzeto');
+                            dodajtermin(id);
                         } else {
                             $('#' + id).siblings('label').html('Slobodno');
+                            uklonitermin(id);
                         }
                     }
-                </script>
+
+
+                    function dodajtermin(id) {
+                        dodanitermini.push(id);
+                        
+                        document.getElementById("testni").innerHTML = dodanitermini;
+                    }
+
+                    function uklonitermin(id) {
+                        for (var i = 0; i < dodanitermini.length; i++) {
+                            if (dodanitermini[i] == id) {
+                                
+                                dodanitermini.splice(i, 1);
+                                break;
+                            }
+                        }
+                        
+                        document.getElementById("testni").innerHTML = dodanitermini;
+                        
+                    }
+
+                    function addterminmodel() {
+                        addindex();
+                        $("#hiddenstateid").val(dodanitermini);
+                    }
+                    </script>
 
                 <!--'<input id="d' + j + '' + i + '" type="checkbox" name="lists" /><label for="lists">Travel</label>'  '<button class="btn-default" >Gumb</button>'-->
                 
