Tablica "dogovorene instrukcije kao instruktor"
dodana tablica + mogućnost odustajanja

--- a/ppij_web_aplikacija/Views/Instrukcije/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Index.cshtml
@@ -5,6 +5,6 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <p>biranje instrukcija</p>
+    <h3>Biranje instrukcija</h3>
 </body>
 </html>
