--- a/ppij_web_aplikacija/Views/Home/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Home/Index.cshtml
@@ -1,22 +1,42 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1>Instrukcije.hr</h1>
     <p class="lead">Dobrodošli na Instrukcije.hr!</p>
-    <p><a href="/test/" class="btn btn-primary btn-lg" >idi na testnu &raquo;</a></p>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <p><a href="/Instrukcije/" class="btn btn-primary btn-lg">Traži instrukcije &raquo;</a></p>
+    }
+    else
+    {
+        <p><a href="/Login/" class="btn btn-primary btn-lg">Traži instrukcije &raquo;</a></p>
+    }
 </div>
 <div class="row">
     <div class="col-md-4">
         <h2>Za početak</h2>
         <p>napravite registraciju</p>
-        <p><a class="btn btn-default" href="/test/">Learn more &raquo;</a></p>
+        @if (User.Identity.IsAuthenticated) { 
+            <p><a class="btn btn-default" href="/Profil/">Learn more &raquo;</a></p>
+        }
+        else
+        {
+            <p><a class="btn btn-default" href="/Login/Registracija">Learn more &raquo;</a></p>
+        }
     </div>
     <div class="col-md-4">
         <h2>Želite li pružati ili primati instrukcije</h2>
         <p>Web stranica pruža mogućnost registracije kao instruktor ili kao klijent</p>
-        <p><a class="btn btn-default" href="/test/">Learn more &raquo;</a></p>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <p><a class="btn btn-default" href="/Profil/">Learn more &raquo;</a></p>
+        }
+        else
+        {
+            <p><a class="btn btn-default" href="/Login/Registracija">Learn more &raquo;</a></p>
+        }
     </div>
     <div class="col-md-4">
         <h2>Zadovoljni dobivenim instrukcijama?</h2>
         <p>Web stranica pruža mogućnost ocijenjivanja instruktora</p>
-        <p><a class="btn btn-default" href="/test/">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Home/">Learn more &raquo;</a></p>
     </div>
 </div>
