--- a/ppij_web_aplikacija/Views/Login/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Login/Index.cshtml
@@ -43,6 +43,7 @@
                         <div class="text-center">
                             <p>Zapamti me  @Html.CheckBoxFor(model => model.zapamtiMe)</p>
                             <input type="submit" class="btn btn-default" value="Login &raquo;" t/> <br />
+                            <p><a class="btn btn-default" href="/Login/Registracija">Registracija &raquo;</a></p>
                         </div>
                     </form>
             </fieldset>
