--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -26,15 +26,21 @@
 
                     <!--Moje dogovorene instrukcije tab-->
                     <div class="tab-pane active top-buffer" role="tabpanel" id="tab1">
-                        
+                        @{var i = 0;}
                         @using (Html.BeginForm())
                         {
                             <fieldset>
                                 <form class="form-horizontal " method="post">
                                     <div style="width:800px;">
+
+
+
                                         <!--tablica kao klijent-->
                                         <div>
                                             <h3>Dogovorene instrukcije kao klijent</h3>
+                                            <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
+                                                <input onclick="dodajindex(1);" type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /> <br />
+                                            </div>
                                             <table class="table-bordered table table-striped header-fixed">
                                                 <thead>
                                                     <tr>
@@ -47,7 +53,7 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    @for (var i = 0; i < Model.mojeInstrukcije.dogovoreni_termini_kao_klijent.Count; i++)
+                                                    @for (i = 0; i < Model.mojeInstrukcije.dogovoreni_termini_kao_klijent.Count; i++)
                                                     {
                                                         <tr>
                                                             <td style="width:150px;">
@@ -68,15 +74,28 @@
                                                                 {
                                                                     <p>Odustano</p>
                                                                 }
-                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].termin.datum_dogovor < @DateTime.Now)
+                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_status == 2)
                                                                 {
-                                                                    <p>Prisustvovano</p>
+                                                                    <p><b>Odustano</b></p>
                                                                 }
-                                                                else
+                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_status == 3)
                                                                 {
-                                                                    <input id="odustani@(i)" type="checkbox" class="mycheck" name="odustani@(i)" onclick="odustani(@(i));" />
-                                                                    <label class="mylabel" for="odustani@(i)">Odustani</label>
+                                                                    <input id="idseen@(i)" type="checkbox" class="mycheck" name="idseen@(i)" onclick="seen(@(i));" />
+                                                                    <label class="myseenlabel" for="idseen@(i)">Otkazano</label>
                                                                     @Html.HiddenFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].odustani, new { id = "hiddenodustani" + i })
+                                                                }
+                                                                else if(@Model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_status == 1)
+                                                                {
+                                                                    
+                                                                    if (@Model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].termin.datum_dogovor < @DateTime.Now)
+                                                                    {
+                                                                    <p>Prisustvovano</p>
+                                                                    }
+                                                                    else { 
+                                                                        <input id="odustani@(i)" type="checkbox" class="mycheck" name="odustani@(i)" onclick="odustani(@(i));" />
+                                                                        <label class="mylabel" for="odustani@(i)">Odustani</label>
+                                                                        @Html.HiddenFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].odustani, new { id = "hiddenodustani" + i })
+                                                                    }
                                                                 }
                                                             </td>
                                                             <td style="width:200px;">
@@ -94,9 +113,17 @@
                                                                         <p>Termin još nije prošao</p>
                                                                     }
                                                                 }
+                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_status == 2)
+                                                                {
+                                                                    <p><b>Zatražili ste odustajanje</b></p>
+                                                                }
+                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_status == 3)
+                                                                {
+                                                                    <p><b style="color:red;">Instruktor je otkazao</b></p>
+                                                                }
                                                                 else
                                                                 {
-                                                                    <p>Odustali ste</p>
+                                                                    <p>Odustano</p>
                                                                 }
                                                             </td>
                                                         </tr>
@@ -104,9 +131,16 @@
                                                 </tbody>
                                             </table>
                                         </div>
+
+
+
+
                                         <div>
                                             <!--tablica kao instruktor-->
                                             <h3>Dogovorene instrukcije kao instruktor</h3>
+                                            <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
+                                                <input onclick="dodajindex(1);" type="submit" class="btn btn-default" style="font-weight: bold;" value="Prihvati izmjene &raquo;" /> <br />
+                                            </div>
                                             <table class="table-bordered table table-striped header-fixed">
                                                 <thead>
                                                     <tr>
@@ -119,7 +153,7 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    @for (var i = 0; i < Model.mojeInstrukcije.dogovoreni_termini_kao_instruktor.Count; i++)
+                                                    @for (; i < Model.mojeInstrukcije.dogovoreni_termini_kao_instruktor.Count; i++)
                                                     {
                                                         <tr>
                                                             <td style="width:150px;">
@@ -140,15 +174,29 @@
                                                                 {
                                                                     <p>Odustano</p>
                                                                 }
-                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].termin.datum_dogovor < @DateTime.Now)
+                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].termin.dogovor_status == 2)
                                                                 {
-                                                                    <p>Prisustvovano</p>
-                                                                }
-                                                                else
-                                                                {
-                                                                    <input id="odustani@(i)" type="checkbox" class="mycheck" name="odustani@(i)" onclick="odustani(@(i));" />
-                                                                    <label class="mylabel" for="odustani@(i)">Odustani</label>
+                                                                    <input id="idseen@(i)" type="checkbox" class="mycheck" name="idseen@(i)" onclick="seen(@(i));" />
+                                                                    <label class="myseenlabel" for="idseen@(i)">Odustani</label>
                                                                     @Html.HiddenFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].odustani, new { id = "hiddenodustani" + i })
+                                                                }
+                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].termin.dogovor_status == 3)
+                                                                {
+                                                                    <p><b>Odustano</b></p>
+                                                                }
+                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].termin.dogovor_status == 1)
+                                                                {
+
+                                                                    if (@Model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].termin.datum_dogovor < @DateTime.Now)
+                                                                    {
+                                                                        <p>Prisustvovano</p>
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <input id="odustani@(i)" type="checkbox" class="mycheck" name="odustani@(i)" onclick="odustani(@(i));" />
+                                                                        <label class="mylabel" for="odustani@(i)">Odustani</label>
+                                                                        @Html.HiddenFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].odustani, new { id = "hiddenodustani" + i })
+                                                                    }
                                                                 }
                                                             </td>
                                                             <td style="width:200px;">
@@ -158,7 +206,7 @@
                                                                     {
                                                                         <label class="col-md-3 control-label" for="ocjena">Upiši ocjenu:</label>
                                                                         <div id="ocjena" class="col-md-6">
-                                                                            @Html.TextBoxFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].termin.dogovor_ocijena)
+                                                                            @Html.TextBoxFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].termin.dogovor_ocijena)
                                                                         </div>
                                                                     }
                                                                     else
@@ -166,9 +214,17 @@
                                                                         <p>Termin još nije prošao</p>
                                                                     }
                                                                 }
+                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].termin.dogovor_status == 2)
+                                                                {
+                                                                    <p><b style="color:red;">Klijent je odustao</b></p>
+                                                                }
+                                                                else if (@Model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].termin.dogovor_status == 3)
+                                                                {
+                                                                    <p><b>Zatražili ste odustajanje</b></p>
+                                                                }
                                                                 else
                                                                 {
-                                                                    <p>Odustali ste</p>
+                                                                    <p>Otkazano</p>
                                                                 }
                                                             </td>
                                                         </tr>
@@ -176,10 +232,13 @@
                                                 </tbody>
                                             </table>
                                         </div>
+
+
+
                                     </div>
                                     @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab1" })
-                                    <div class="col-md-2 mali-razmak-gore">
-                                        <input onclick="dodajindex(1);" type="submit" class="btn btn-default" value="Prihvati izmjene &raquo;" /> <br />
+                                    <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
+                                        <input onclick="dodajindex(1);" type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /><br />
                                     </div>
                                 </form>
                             </fieldset>
@@ -361,6 +420,16 @@
                     //odabrani termini za model
                     var dodanitermini;
                     var dogovorenitermini;
+
+                    //seen - skoro isto ko i odustani
+                    function seen(id){
+                        if($('#hiddenodustani' +id).val() == 'true'){
+                            $('#hiddenodustani' +id).val(false)
+                        }
+                        else{
+                            $('#hiddenodustani' +id).val(true)
+                        }
+                    }
 
                     //odustani od dogovorenog termina
                     function odustani(id){
