--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -39,7 +39,7 @@
                                         <div>
                                             <h3>Dogovorene instrukcije kao klijent</h3>
                                             <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
-                                                <input onclick="dodajindex(1);" type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /> <br />
+                                                <input type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" onclick="dodajindex(1);" /> <br />
                                             </div>
                                             <table class="table-bordered table table-striped header-fixed">
                                                 <thead>
@@ -61,7 +61,7 @@
                                                                 @Html.DisplayFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].termin.datum_dogovor)
                                                             </td>
                                                             <td style="width:100px;">
-                                                                @Html.DisplayFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].kategorija)
+                                                                @Html.DisplayFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].predmet)
                                                             </td>
                                                             <td style="width:100px;">
                                                                 @Html.DisplayFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_klijent[i].ime)
@@ -139,7 +139,7 @@
                                             <!--tablica kao instruktor-->
                                             <h3>Dogovorene instrukcije kao instruktor</h3>
                                             <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
-                                                <input onclick="dodajindex(1);" type="submit" class="btn btn-default" style="font-weight: bold;" value="Prihvati izmjene &raquo;" /> <br />
+                                                <input type="submit" class="btn btn-default" style="font-weight: bold;" value="Prihvati izmjene &raquo;" onclick="dodajindex(1);" /> <br />
                                             </div>
                                             <table class="table-bordered table table-striped header-fixed">
                                                 <thead>
@@ -161,7 +161,7 @@
                                                                 @Html.DisplayFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].termin.datum_dogovor)
                                                             </td>
                                                             <td style="width:100px;">
-                                                                @Html.DisplayFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].kategorija)
+                                                                @Html.DisplayFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].predmet)
                                                             </td>
                                                             <td style="width:100px;">
                                                                 @Html.DisplayFor(model => model.mojeInstrukcije.dogovoreni_termini_kao_instruktor[i].ime)
@@ -261,10 +261,35 @@
                             {
 
                                 <fieldset>
-                                    
-                                    <div id="testni" class="hidden">
-                                        <!--testiranje-->
-                                    </div>
+                                    <h4>Popis Kategorija</h4>
+                                    @for (var k = 0; k < Model.mojeInstrukcije.popis_kategorija.Count; k++) { 
+                                    <!--<dl class="dropdown">
+                                        <dt >
+                                            <a href="#">-->
+                                                <div>
+                                                    @Html.DisplayFor(model => model.mojeInstrukcije.popis_kategorija[k].kategorija_ime)
+                                                </div>
+                                                <!--<span class="hida" >Odabrano: </span>
+                                            </a>
+                                        </dt>-->
+
+                                        <!--<dd id="dd@(k)">
+                                            <div class="mutliSelect">-->
+                                                <ul id="ul@(k)">
+                                                    @for (var j = 0; j < Model.mojeInstrukcije.popis_kategorija[k].mojiPredmeti.Count; j++)
+                                                    {
+                                                        <li>
+                                                            <input id="nad@(k)kat@(j)" type="checkbox" class="mycheck" name="nad@(k)kat@(j)" onclick="" />
+                                                            <label class="mydroplabel" for="nad@(k)kat@(j)">@Html.DisplayFor(model => model.mojeInstrukcije.popis_kategorija[k].mojiPredmeti[j].predmet.naziv_predmet)</label>
+                                                        </li>
+                                                    }
+                                                </ul>
+                                            <!--</div>
+                                        </dd>
+                                    </dl>-->
+                                    }
+
+
                                     <h4>Popis termina</h4>
                                     <div style="width:800px;">
                                         <table class="table-bordered table table-striped header-fixed">
@@ -286,15 +311,7 @@
                                     @Html.HiddenFor(model => model.mojeInstrukcije.mojiTermini, new { id = "hiddenstateid" })
                                     @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab2" })
 
-                                    <h4>Popis Kategorija</h4>
-                                    <ul>
-                                        @foreach (var kategorija in ViewBag.kategorije)
-                                        {
-                                            <li>
-                                                @kategorija.naziv_kategorija @kategorija.kratica_kategorija
-                                            </li>
-                                        }
-                                    </ul>
+                                    
 
                                     <div class="col-md-2 mali-razmak-gore">
                                         <input onclick="addterminmodel(2);" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
@@ -403,12 +420,53 @@
 
 
                 <script type="text/javascript">
+                    var droppedID;
+
+                    //$(".dropdown dt a").on('click', function() {
+                        //$(".dropdown dd ul").slideToggle('fast');
+                        //var id = (this).closest.id;
+                        //document.getElementById("test123").innerHTML = id;
+                        //$("#dd1 #ul1").slideToggle('fast');
+                    //});
+
+                    /*function dodaj(id){
+                        $(".dropdown dd ul").slideToggle('fast');
+                    }
+
+                    $(".dropdown dd ul li a").on('click', function() {
+                        $(".dropdown dd ul").hide();
+                    });
+
+                    function getSelectedValue(id) {
+                        return $("#" + id).find("dt a span.value").html();
+                    }
+
+                    $(document).bind('click', function(e) {
+                        var $clicked = $(e.target);
+                        if (!$clicked.parents().hasClass("dropdown")) $(".dropdown dd ul").hide();
+                    });
+
+                    $('.mutliSelect input[type="checkbox"]').on('click', function() {
+
+                        var title = $(this).closest('.mutliSelect').find('input[type="checkbox"]').val();
+
+                        if ($(this).is(':checked')) {
+                            $(".hida").html("Odabrano: "+selectcount);
+                        } else {
+                            $(".hida").html("Odabrano: "+selectcount);
+                        }
+                    });*/
+
+
+
+
                     $(document).ready(function () {
                         activaTab('tab' + @Html.Raw(Model.trenutniTab) );
                     });
                     function activaTab(tab) {
                         $('#myTab a[href="#' + tab + '"]').tab('show');
                     };
+
                 </script>
 
                 <div id="test123">
@@ -476,7 +534,7 @@
                         }
                         document.getElementById("tableT").innerHTML = rows;
                         dodanitermini = @Html.Raw(Json.Encode(Model.mojeInstrukcije.mojiTermini));
-                        document.getElementById("testni").innerHTML = dodanitermini;
+                        //document.getElementById("test123").innerHTML = dodanitermini;
                         oznaciTermine();
                     });
 
