--- a/ppij_web_aplikacija/Content/Site.css
+++ b/ppij_web_aplikacija/Content/Site.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿@import url('Site.css');
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -14,4 +15,8 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+#footer{
+    margin-top: 20px;
 }
