--- a/ppij_web_aplikacija/Views/Shared/_Layout.cshtml
+++ b/ppij_web_aplikacija/Views/Shared/_Layout.cshtml
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/css")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -16,41 +16,37 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("O aplikaciji", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Instrukcije.hr", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Početna", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Pomoć", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
-                <ul class ="nav navbar-right navbar-nav" >
-                    @if (Request.IsAuthenticated)
-                    {
+                <ul class="nav navbar-right navbar-nav">
+                    @if (Request.IsAuthenticated) {
                         <li class="navbar-right">@Html.ActionLink(User.Identity.Name, "Index", "Profil", new { area = "" }, null)</li>
                         <li class="navbar-right">@Html.ActionLink("Logout", "Logout", "Login", new { area = "" }, null)</li>
-                    }
-                    else
-                    {
+                    } else {
                         <li class="navbar-right">@Html.ActionLink("Login", "Index", "Login", new { area = "" }, null)</li>
                         <li class="navbar-right">@Html.ActionLink("Registracija", "Registracija", "Login", new { area = "" }, null)</li>
                     }
                 </ul>
             </div>
             <div class="navbar-collapse collapse">
-                
+
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="body-content">
         @RenderBody()
     </div>
     <footer id="footer">
         <hr />
-        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <p>&copy; @DateTime.Now.Year - Instrukcije.hr</p>
     </footer>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
-
 </html>
