Početak pretraživanja instrukcija

--- a/ppij_web_aplikacija/Views/Shared/_Layout.cshtml
+++ b/ppij_web_aplikacija/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Početna", "Index", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Instrukcije", "Kategorija", "Instrukcije")</li>
                     <li>@Html.ActionLink("Pomoć", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
                 <ul class="nav navbar-right navbar-nav">
